--- a/PRIME_cluster/cluster.yaml
+++ b/PRIME_cluster/cluster.yaml
@@ -1,5 +1,5 @@
 __default__:
-    partition: q24,q32,q36,q64
+    partition: q36,q64   #q24,q32
     name: "sector.{rule}.{wildcards}"
     output: "logs/cluster/{rule}.{wildcards}.out"
     error: "logs/cluster/{rule}.{wildcards}.err"
